--- a/Programmes/03-Module3-JSClient-UnSiteInternetSansServeur/siteClient/livres.html
+++ b/Programmes/03-Module3-JSClient-UnSiteInternetSansServeur/siteClient/livres.html
@@ -36,7 +36,7 @@
         <h1 class="border border-dark m-3 p-3 rounded text-center customBackgroundColorBlue text-white">Liste des Livres de la bibliothèque</h1>
         
         <div>
-            <table class="table text-center table-hover">
+            <table class="table text-center monTableau" id="tableauLivres">
                 <thead>
                     <tr class="table-dark">
                         <th scope="col">Titre</th>
@@ -45,39 +45,10 @@
                         <th colspan="2">Actions</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>L'Algorithmique selon H2PROG</td>
-                        <td>Matthieu GASTON</td>
-                        <td>200</td>
-                        <td><button type="button" class="btn btn-warning m-2">Modifier</button></td>
-                        <td><button type="button" class="btn btn-danger m-2">Supprimer</button></td>
-                    </tr>
-                    <tr>
-                        <td>La France du 19ème</td>
-                        <td>Albert Patrick</td>
-                        <td>500</td>
-                        <td><button type="button" class="btn btn-warning m-2">Modifier</button></td>
-                        <td><button type="button" class="btn btn-danger m-2">Supprimer</button></td>
-                    </tr>
-                    <tr>
-                        <td>Le monde des animaux</td>
-                        <td>Marc Merlin</td>
-                        <td>250</td>
-                        <td><button type="button" class="btn btn-warning m-2">Modifier</button></td>
-                        <td><button type="button" class="btn btn-danger m-2">Supprimer</button></td>
-                    </tr>
-                    <tr>
-                        <td>Le virus d'Asie</td>
-                        <td>Tya Milo</td>
-                        <td>120</td>
-                        <td><button type="button" class="btn btn-warning m-2">Modifier</button></td>
-                        <td><button type="button" class="btn btn-danger m-2">Supprimer</button></td>
-                    </tr>
-                </tbody>
             </table>
             <a href=""  class="btn btn-success d-block">Ajouter</a>
         </div>
     </main>
+    <script src="javascript/main.js"></script>
 </body>
 </html>
