02-Module2-HelloWorldClientVsServeur-02-AffichageDepuisUnScriptClient-Correctif

--- a/Programmes/02-Module2-HelloWorldClientVsServeur/client/index.html
+++ b/Programmes/02-Module2-HelloWorldClientVsServeur/client/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Table de Multiplicaiton de 5 : </h1>
+    <h1>Table de Multiplication de 5 : </h1>
     <div>Affichage de la table de multiplication</div>
-    <div class="resultatDeLaTableDeMuliplicationDe5"></div>
+    <div class="resultatDeLaTableDeMultiplicationDe5"></div>
     <script src="main.js"></script>
 </body>
 </html>
