03-Module3-JSClient-UnSiteInternetSansServeur-06-AjouterUnLivre-Etape1

--- a/Programmes/03-Module3-JSClient-UnSiteInternetSansServeur/siteClient/livres.html
+++ b/Programmes/03-Module3-JSClient-UnSiteInternetSansServeur/siteClient/livres.html
@@ -46,7 +46,7 @@
                     </tr>
                 </thead>
             </table>
-            <a href=""  class="btn btn-success d-block">Ajouter</a>
+            <button onclick="AjouterFormulaire()" class="btn btn-success w-100">Ajouter</button>
         </div>
     </main>
     <script src="javascript/main.js"></script>
