03-Module3-JSClient-UnSiteInternetSansServeur-08-AjouterUnLivre-Etape3

--- a/Programmes/03-Module3-JSClient-UnSiteInternetSansServeur/siteClient/livres.html
+++ b/Programmes/03-Module3-JSClient-UnSiteInternetSansServeur/siteClient/livres.html
@@ -63,7 +63,7 @@
                     <label for="nombreDePages" class="form-label">Nombre de pages</label>
                     <input type="number" class="form-control" id="nombreDePages">
                 </div>
-                <button type="submit" class="btn btn-primary">Valider</button>
+                <button class="btn btn-primary" id="validationFormulaireAjout">Valider</button>
             </fieldset>
         </form>
     </main>
