--- a/Programmes/03-Module3-JSClient-UnSiteInternetSansServeur/siteClient/livres.html
+++ b/Programmes/03-Module3-JSClient-UnSiteInternetSansServeur/siteClient/livres.html
@@ -45,6 +45,7 @@
                         <th colspan="2">Actions</th>
                     </tr>
                 </thead>
+                <tbody></tbody>
             </table>
             <button onclick="AjouterFormulaire()" class="btn btn-success w-100">Ajouter</button>
         </div>
