--- a/Programmes/03-Module3-JSClient-UnSiteInternetSansServeur/siteClient/livres.html
+++ b/Programmes/03-Module3-JSClient-UnSiteInternetSansServeur/siteClient/livres.html
@@ -47,7 +47,7 @@
                 </thead>
                 <tbody></tbody>
             </table>
-            <button onclick="AjouterFormulaire()" class="btn btn-success w-100">Ajouter</button>
+            <button onclick="afficherFormulaire()" class="btn btn-success w-100">Ajouter</button>
         </div>
         <form id="ajoutFormulaire" class="d-none">
             <fieldset>
@@ -65,6 +65,26 @@
                     <input type="number" class="form-control" id="nombreDePages">
                 </div>
                 <button class="btn btn-primary" id="validationFormulaireAjout">Valider</button>
+            </fieldset>
+        </form>
+
+        <form id="modificationLivreFormulaire" class="d-none">
+            <fieldset>
+                <legend>Modification d'un livre</legend>
+                <div class="mb-3">
+                    <label for="titre" class="form-label">Titre</label>
+                    <input type="text" class="form-control" id="titre">
+                </div>
+                <div class="mb-3">
+                    <label for="auteur" class="form-label">Auteur</label>
+                    <input type="text" class="form-control" id="auteur">
+                </div>
+                <div class="mb-3">
+                    <label for="nombreDePages" class="form-label">Nombre de pages</label>
+                    <input type="number" class="form-control" id="nombreDePages">
+                </div>
+                <input type="hidden" id="identifiant" value="">
+                <button class="btn btn-primary" id="validationFormulaireModification">Modifier</button>
             </fieldset>
         </form>
     </main>
